<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282196F3"
    tools:context=".MateriSatu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#410099CC"
            android:fontFamily="serif-monospace"
            android:text="@string/judul_materi_satu"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/isi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#FFFFFF"
            android:text="@string/isi_materi_satu"
            android:textColor="#6f6f6f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/judul_sintaks_satu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#632196F3"
            android:text="@string/judul_sintaks_satu"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#6f6f6f"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/sintaks_satu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ADD8D2D2"
            android:fontFamily="serif-monospace"
            android:text="@string/sintaks_satu"
            android:textColor="#6f6f6f"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:autoLink="all"
            android:background="#8603A9F4"
            android:clickable="true"
            android:text="@string/link_materi_satu"
            android:textAlignment="center"
            android:textColor="#6f6f6f"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>